testimonials: further layout improment. fixed bg color glich while sliding. added background color to buttons for contrast.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,29 @@
 {
 	margin-top: 100px;
     margin-bottom: 50px; 
+    background-color: #f8f9fa
 }
 
 
 .carousel-item
 {
+	background-color: #f8f9fa
 	padding-top: 20px;
 	padding-bottom: 20px; 
+	padding: 20px; 
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon 
+{
+    background-color: rgb(58, 58, 58); 
+    padding: 5px;
+	border-radius: 50%;
+
+}
+
+.carousel-control-prev,
+.carousel-control-next 
+{
+    color: rgb(18, 18, 18); 
 }
